# flashcard-tgbot

./: .env.example  .pre-commit-config.yaml  README.md  add_test_data.py  config.py  docker-compose-dev.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 043c77652abf_initial_migration.py
bot/: config.py  constants.py  main.py  messages.py
bot/handlers/: _category.py  category.py  collection.py  main.py
bot/handlers/categories/: my_categories.py  types.py
bot/handlers/collections/: collections.py
bot/keyboards/: category.py  collection.py  confirmation.py  main.py  paginated_inline_keyboard.py
bot/models/: __init__.py  base.py  category.py  collection.py  flashcard.py  flashcard_studies.py  user.py  user_categories.py
bot/queries/: category.py
bot/utils/: db.py
bot/utils/helpers/: context.py  db.py  handlers.py
bot/utils/tools/: i18n.py
locales/en/LC_MESSAGES/: messages.po
